--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,11 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/form">Form</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/addproduct">Add Product</a>
+      </li>
+
+
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
