--- a/src/app/addform/addform.component.html
+++ b/src/app/addform/addform.component.html
@@ -7,21 +7,40 @@
       <label>ID</label>
       <input type="number" class="form-control" formControlName="id" placeholder="Enter id">
     </div>
+    <div class="alert alert-danger" *ngIf="this.addForm.controls['id'].invalid &&  this.addForm.controls['id'].touched">
+      id is required
+    </div>
+
     <div class="form-group">
       <label>Title</label>
       <input type="text" class="form-control"  formControlName="title" placeholder="Enter title">
+    </div>
+    <div class="alert alert-danger" *ngIf="this.addForm.controls['title'].invalid && this.addForm.get('title')?.touched" >
+      <p *ngIf="this.addForm.controls['title'].hasError('required')">title is required</p>
+      <p *ngIf="this.addForm.controls['title'].hasError('minlength')"> title min 3 caracteres</p>
     </div>
     <div class="form-group">
       <label>Price</label>
       <input type="number" class="form-control"  placeholder="Enter price" formControlName="price">
     </div>
+    <div class="alert alert-danger" *ngIf="this.addForm.controls['price'].invalid && this.addForm.controls['price'].touched">
+     price is required
+    </div>
+
     <div class="form-group">
       <label>Quantite</label>
       <input type="number" class="form-control"  formControlName="quantite" placeholder="Enter quantite">
     </div>
+    <div class="alert alert-danger" *ngIf="this.addForm.controls['quantite'].invalid && this.addForm.controls['quantite'].touched">
+      quantite is required
+    </div>
+
     <div class="form-group">
       <label>Like</label>
       <input type="number" class="form-control"  formControlName="like" placeholder="Enter like">
+    </div>
+    <div class="alert alert-danger" *ngIf="this.addForm.controls['like'].invalid && this.addForm.controls['like'].touched">
+      like is required
     </div>
 
     <button type="submit" class="btn btn-primary" (click)="save()" [disabled]="addForm.invalid">Submit</button>
